--- a/examen-revision/src/index.html
+++ b/examen-revision/src/index.html
@@ -27,6 +27,27 @@
     </div>
     <script src="js/main.js" type="module"></script>
 
+    <div class="flexbox">
+      <div class="wrapper wrapper-1">
+        <div class="box">box 1</div>
+        <div class="box">box 2</div>
+        <div class="box">box 3</div>
+      </div>
+      <div class="wrapper wrapper-2">
+        <div class="box">box 1</div>
+        <div class="box">box 2</div>
+        <div class="box">box 3</div>
+      </div>
+      <div class="wrapper wrapper-3">
+        <div class="box">box 1</div>
+        <div class="box">box 2</div>
+        <div class="box">box 3</div>
+        <div class="box">box 4</div>
+        <div class="box">box 5</div>
+        <div class="box">box 6</div>
+      </div>
+    </div>
+
     <div class="selectors">
       <h2>Titre 1</h2>
       <div class="article">
